[project]
name = "06-huggingface-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "kobert-transformers>=0.4.1",
    "sentencepiece>=0.2.1",
    "transformers>=5.3.0",
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["utils*", "models*"]

[tool.uv]
package = true
